Fix text color of input fields to be visible on dark background

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -91,6 +91,7 @@
 
 .combo-box {
     -fx-background-color: #2d2d2d;
+    -fx-text-fill: white;
 }
 
 .combo-box .cell {
